Update paths after build changes

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,6 @@
      <link rel="stylesheet" href="style/app.css">
   </head>
   <body class="loading">
-    <script src="dist/initapp.js"></script>
+    <script src="js/initapp.js"></script>
   </body>
 </html>
