use media theme, cleanup markup

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="components/gaia-theme/gaia-theme.css">
      <link rel="stylesheet" href="style/app.css">
   </head>
-  <body class="loading">
+  <body class="loading theme-media">
     <script src="js/initapp.js"></script>
   </body>
 </html>
