--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,9 @@
      <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
      <meta charset="utf-8">
      <title>Directory</title>
-     <link rel="stylesheet" href="components/gaia-fonts/style.css">
-     <link rel="stylesheet" href="components/gaia-theme/gaia-theme.css">
-     <link rel="stylesheet" href="style/app.css">
+     <link rel="stylesheet" href="./components/gaia-fonts/style.css">
+     <link rel="stylesheet" href="./components/gaia-theme/gaia-theme.css">
+     <link rel="stylesheet" href="./style/app.css">
   </head>
   <body class="loading theme-media">
     <script src="js/initapp.js"></script>
