--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 		<meta charset="utf-8">
-		<meta name="theme-color" content="#333">
-		<title>Directory</title>
+		<meta name="theme-color" content="#eeeeee">
+		<title>Hackerplace</title>
 		<link rel="stylesheet" href="./components/gaia-fonts/style.css">
 		<link rel="stylesheet" href="./components/gaia-theme/gaia-theme.css">
 		<link rel="stylesheet" href="./style/app.css">
 	</head>
-	<body class="loading theme-media">
+	<body class="loading theme-settings">
 		<script src="js/initapp.js"></script>
 	</body>
 </html>
