Bug 1161117 - Remove the loading gears graphic

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="./components/gaia-theme/gaia-theme.css">
 		<link rel="stylesheet" href="./style/app.css">
 	</head>
-	<body class="loading theme-settings">
+	<body class="theme-settings">
 		<script src="js/initapp.js"></script>
 	</body>
 </html>
